SUBDIRS = src
EXTRA_DIST = src/n64/N64.hpp src/n64/MMU.hpp src/n64/opcodes.hpp src/n64/PIFrom.hpp \
	src/n64/ROM.hpp src/n64/instruction.hpp src/n64/vr4300/vr4300.hpp src/n64/rcp/RSP.hpp \
	src/wxWidgets/wxUltra64.hpp src/wxWidgets/MainWindow.hpp src/wxWidgets/RegistersWindow.hpp \
	src/wxWidgets/DebuggerWindow.hpp src/json.hpp src/ultra64.hpp
